fixed weird spacing on the right

--- a/css/lizstyle.css
+++ b/css/lizstyle.css
@@ -20,6 +20,7 @@ body {
 
 .hello {
 	font-size: 300%;
+	padding: 10% 0;
 }
 
 h1 {
@@ -71,12 +72,12 @@ embed {
 
 .logos {
 	width: 70%;
+	/* margin: 10%; */
 	padding: 1%;
-	align-items: center;
 }
 
 .hello-col {
-	padding: 10%;
+	padding: 10% 0;
 }
 
 /* Make the links look cool */
@@ -108,6 +109,10 @@ a:hover {
 	grid-template-columns: auto auto auto;
   }
 
+.grid-container-logos {
+	justify-items: center;
+}
+
 .grid-item {
 	  margin: 3%;
   }
@@ -127,6 +132,7 @@ a:hover {
 form {
 	text-align: center;
 }
+
 input, textarea {
 	border-radius: 20px;
 	border-top: none;
@@ -134,7 +140,7 @@ input, textarea {
 	border-right: none;
 	border-bottom: solid 2px #f62a00;
 	width: 50%;
-	margin: 2% 20%;
+	margin: 2% 10%;
 }
 
 input:focus, textarea:focus {
